--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
 .active {
   background-color: aqua;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
